Investments: improved overlapping pulse keyword issue; fixed investmentsList and investmentsDisplay container sizes so heights are constant throughout loading process

--- a/src/Investments/Investments.css
+++ b/src/Investments/Investments.css
@@ -22,14 +22,14 @@
   width: 100%;
   background-color: var(--primary-background-color);
   border-radius: var(--primary-border-radius);
-  flex-grow: 0.3; /* Height = 3/10 of container */
+  height: 25%;
 }
 
 .Investments-List-Rectangle {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50%;
+  height: 6.5rem;
   width: 95%;
   gap: 0.5em;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -62,9 +62,30 @@
   background-color: var(--primary-background-color);
   border-radius: var(--primary-border-radius);
   padding: 1em;
-  flex-grow: 1; /* Height = rest of container */
+  height: 75%;
 }
 
 .Investment-Add-Delete-Table-Container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3em;
   width: 50%;
+  height: 100%;
+}
+
+.Investments-Add-Delete-Container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.Investments-Table-Container {
+  width: 100%;
+  height: 10em;
+  padding: 1em;
+}
+
+.Investments-Display-Container {
+  width: 50%;
+  height: 100%;
 }
